--- a/cfgs/imagenet/resnet50_1x64d.yml
+++ b/cfgs/imagenet/resnet50_1x64d.yml
@@ -1,16 +1,16 @@
-workers: 16
+workers: 12
 pixel_mean: [0.485, 0.456, 0.406]
 pixel_std: [0.229, 0.224, 0.225]
-gpu_ids: '0,1,2,3,4,5,6,7'
+gpu_ids: '0,1'
 
 CLS:
   arch: 'resnet50_1x64d'
-  data_root: '/home/user/Database/ILSVRC2017/Data/CLS-LOC/'
+  data_root: '/workspace/mnt/group/terror/yangmingzhao/2018.12.6githubissues/tiny-imagenet-200/'
   train_folder: 'train'
   val_folder: 'val'
   epochs: 100
-  train_batch: 256
-  test_batch: 200
+  train_batch: 64
+  test_batch: 32
   base_lr: 0.1
   lr_schedule: [30, 60, 90]
   gamma: 0.1
@@ -24,10 +24,11 @@ CLS:
   pixel_jitter: [-20, 20]
   grayscale: 0
   disp_iter: 20
-  ckpt: 'ckpts/imagenet/resnet50_1x64d'
+  ckpt: '/workspace/mnt/group/ocr-fd-group/yangmingzhao/2018.12.6githubissues/pytorch-priv/ckpts/test/'
   resume: ''
   start_epoch: 0
   pretrained: ''
   validate: True
   evaluate: False
-
+  drop_prob: 0.2
+  block_size: 5
